Display username with cookie parser implemented

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,10 +29,10 @@
           </tr>
         </thead>
         <tbody>
-          <% for (let id in urls) { %>
+          <% for (let id in urlDatabase) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urlDatabase[id] %></td>
               <td><form 
                 method="GET"
                 action="/urls/<%= id %>">
