--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <div> 
-      
+  <nav class="navbar navbar-expand-md navbar-dark bg-success" 
       <a class="navbar-brand" href="/urls">TinyApp</a>
       <button
         class="navbar-toggler"
@@ -18,15 +16,20 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div>
+        
       </div>
-      
-    </div>
-    <div class="right_nav">
-      <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="Username">
-        <button type="submit">Login</button>
-      </form>
+    </div class="navbar-nav ml-auto"></div>
+    <%if (username && user.email) { %>
+    <form method="post" action="/logout">
+      <label>Logged in as:<%=user.mail %></label>
+      <button type="submit">Logout</button>
+    </form>
+  <%} else { %>
+  <a class="nav-item nav-link text-dark" href="/Logged in as Tinyapp user">Logged in as Tinyapp user</a>
+  <a class="nav-item nav-link text-dark" href="/Logout"></a>
+  <a class="nav-item nav-link border border-dark" herf="/Logout">Logout</a>
+  <% } %>
+      </div>
     </div>
   </nav>
 </header>
