--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,17 +18,25 @@
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         
       </div>
+      </div>
+      <!-- Assuming this is the header part of your EJS template -->
+      <% if (username) { %>
+        <!-- Display the username and logout form -->
+        <p>Welcome, <%= username %>!</p>
+        <form action="/logout" method="post">
+          <button type="submit">Log Out</button>
+        </form>
+      <% } else { %>
+        <!-- Display the login form -->
+        <form action="/login" method="post">
+          <input class="form-control" type="text" name="username" placeholder="enter username">
+          <!-- Your login form fields (e.g., username and password) -->
+          <!-- ... -->
+          <button type="Submit">Log In</button>
+        </form>
+      <% } %>
+      <div>
     </div class="navbar-nav ml-auto"></div>
-    <%if (username && user.email) { %>
-    <form method="post" action="/logout">
-      <label>Logged in as:<%=user.mail %></label>
-      <button type="submit">Logout</button>
-    </form>
-  <%} else { %>
-  <a class="nav-item nav-link text-dark" href="/Logged in as Tinyapp user">Logged in as Tinyapp user</a>
-  <a class="nav-item nav-link text-dark" href="/Logout"></a>
-  <a class="nav-item nav-link border border-dark" herf="/Logout">Logout</a>
-  <% } %>
       </div>
     </div>
   </nav>
