Registering new user implemented

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,7 +16,15 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        
+      
+<div>
+  <span>Welcome, <%= username %>!</span>
+</div>
+<!-- header.ejs -->
+<div>
+  <span>Welcome, <%= user.email %>!</span>
+</div>
+
       </div>
       </div>
       <!-- Assuming this is the header part of your EJS template -->
