--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,9 +17,9 @@
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       
-<div>
+<!-- <div>
   <span>Welcome, <%= username %>!</span>
-</div>
+</div> -->
 <!-- header.ejs -->
 <div>
   <span>Welcome, <%= user.email %>!</span>
