--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success" 
+  <nav class="navbar navbar-expand-md navbar-dark bg-success" >
       <a class="navbar-brand" href="/urls">TinyApp</a>
       <button
         class="navbar-toggler"
@@ -15,15 +15,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      
-<!-- <div>
-  <span>Welcome, <%= username %>!</span>
-</div> -->
-<!-- header.ejs -->
-<div>
-  <span>Welcome, <%= user.email %>!</span>
-</div>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a> 
 
       </div>
       </div>
@@ -49,3 +41,4 @@
     </div>
   </nav>
 </header>
+
