--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -2,18 +2,42 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Bootstrap CSS -->
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+  crossorigin="anonymous"
+/>
+<%- include('partials/_header') %>
   <title>Registration Page</title>
 </head>
 <body>
   <h1>Registration</h1>
-  <form action="/register" method="post">
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" required>
-    <br>
-    <button type="submit">Register</button>
-  </form>
-</body>
+
+  <form action="/register" method="POST" class="w-25 px-4">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+        name="email"
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="Enter email"
+        />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input
+        name="password"
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          placeholder="Password"
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+  </body>
 </html>
