--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -32,20 +33,17 @@
           <% for (let id in urlDatabase) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urlDatabase[id] %></td>
-              <td><form 
-                method="GET"
-                action="/urls/<%= id %>">
-                <button class="btn btn-outline-primary">Edit</button>
-                </button>
-              </form></td>
+              <td><%= urlDatabase[id].longURL %></td>
+              <td>
+                <form method="GET" action="/urls/<%= id %>">
+                  <button class="btn btn-outline-primary">Edit</button>
+                </form>
+              </td>
               <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
-                  
                   <button class="btn btn-outline-danger">Delete</button>
                 </form>
               </td>
-         
             </tr>
           <% } %>
         </tbody>
