--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,9 +9,8 @@
       crossorigin="anonymous"
     />
     <title>URL - TinyApp Example</title>
-    
   </head>
-  
+
   <body>
     <%- include('partials/_header') %>
 
@@ -22,23 +21,27 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
         </p>
-       
       </div>
       <div class="card-footer text-muted">
         <h5>Edit</h5>
-        <form class="form-inline" method="POST" action="/urls/<%= shortURL %>/update">
-        <div class="row mx-auto">
-          <h6>New URL:</h6>
-          <input                
-                  type="text"
-                  name="longURL"
-                  placeholder="<%= longURL.longURL %>"
-                ><button type="submit" class="btn btn-primary">Update</button>
-        </div>
-              </form>
+        <form
+          class="form-inline"
+          method="POST"
+          action="/urls/<%= shortURL %>/update"
+        >
+          <div class="row mx-auto">
+            <h6>New URL:</h6>
+            <input
+              type="text"
+              name="longURL"
+              placeholder="<%= longURL.longURL %>"
+            />
+            <button type="submit" class="btn btn-primary">Update</button>
+          </div>
+        </form>
       </div>
     </div>
-    
+
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
